fix table overflow

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,6 +1,6 @@
 .container {
     width: 90%;
-    max-width: 1000px;
+    max-width: 1100px;
     margin: auto;
 }
 
